# codequest

./: .gitignore  Cargo.toml
async_longtime/src/: main.rs
async_spawn/src/: main.rs
async_test/src/: main.rs
cipher_cmd/src/: main.rs
mandelbrot/: Cargo.toml
scraping_shodou/src/: main.rs
src/: abc_154_d.rs  abc_167_c.rs  abc_197_a.rs  abc_199_a.rs  add_generics.rs  add_i32.rs  array_get.rs  array_init.rs  array_init_2.rs  bingo.rs  bingo_vec.rs  bmi.rs  bmi_checker.rs  bmi_method.rs  bmi_struct.rs  box_test.rs  caesar_enc.rs  calc_multi.rs  calc_single.rs  chat_client.rs  chat_serve.rs  coin.rs  compairtext.rs  counter.rs  counter_fix.rs  cur_file.rs  dlist.rs  findfile.rs  fizz_buzz_file.rs  fizz_buzz_file_2.rs  hashmap_check.rs  hashmap_matcher.rs  http_client.rs  http_client_get_async.rs  http_client_post.rs  http_client_tls_get.rs  image_ichimatsu.rs  image_thumb.rs  iter_prime.rs  jisho.rs  (+39 more)
src/openai/: calc_multi.rs  calc_single.rs  mythread.rs  send_request.rs
wasm_hello/src/: lib.rs  runner.rs  server.py  server.rs
wasm_tomat/: Cargo.toml  index.html
wasm_tomat/src/: lib.rs  parser.rs  runner.rs
