workspace = { members = ["mytest", "wasm_hello", "wasm_tomat"] }
[package]
name = "codequest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper-tls = "0.5.0"
image = "0.23.14"
peg = "0.7"
